<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/textEndpoint" />

                <EditText
                    android:id="@+id/editEnpoint"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="75" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvAppId"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/textAppId" />

                <EditText
                    android:id="@+id/editAppId"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="75" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvSecretKey"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/textSecretKey" />

                <EditText
                    android:id="@+id/editSecretKey"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="75" 
                    android:password="true"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>